Refactoring and code checking.
git-svn-id: https://boardcast.svn.beanstalkapp.com/cazcade/trunk@230 fbda54ab-d95b-46df-b13a-fc6b34aa47f5